hphp/test/slow/typedef/typedef_duplicate3.php.expectf

Fatal error: The name Existing is already defined as a class in %s on line 6
